# Sahara-Fenneck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gera_tabela.py  inovesa-site-data.json  main.py  oauth_defaults.example.json  pyproject.toml  requirements-dev.txt  requirements-slim.txt  requirements.txt  tabela papai.xlsx
.github/workflows/: ci.yml
assets/: README.md
docs/: INSTALADOR-ANALISE.md  INSTALADOR-E-VERSOES.md  OAUTH-SETUP.md  STATUS.md  SUPERCHARGE_PLAN.md  V2-INTEGRACOES.md
installer/: FennecExcel-Slim.iss  FennecExcel.iss  README.md  configurar_ambiente.bat  run_fennec.bat
installer/bootstrap/: postinstall.ps1  setup_slim.ps1
scripts/: bench.py  build_installer.ps1  create_v1_backup.ps1  fix_head_icon.py  gera_tabela_papai.py  make_fennec_ico.py  make_installer_assets.py  remove_bg_mascot.py  smoke_test_agent_loop.py  smoke_test_backend.py  smoke_test_checkpoints_visibility.py  smoke_test_confirmation.py  smoke_test_delete_sheet.py  smoke_test_raw_actions.py  smoke_test_sheet_queries.py  smoke_test_slim.ps1  smoke_test_switch_validate.py
src/: __init__.py  com_utils.py  errcodes.py  logging_config.py
src/agent/: __init__.py  actions.py  excel_write.py  llm_client.py  nim_client.py  ollama_client.py  result.py  runner.py  sandbox.py  tools.py
src/checkpoints/: __init__.py  manager.py
src/cli/: repl.py
src/config/: __init__.py  app_settings.py
src/gui/: __init__.py  chat_bubbles.py  chat_controller.py  constants.py  excel_functions_catalog.py  gradient.py  gradient_btn.py  indexer_window.py  input_bar.py  instruct_panel.py  main_window.py  settings_controller.py  side_buttons.py  styles.py  tips_panel.py  workspace_manager.py
src/indexing/: __init__.py  excel_reader.py
src/integrations/: __init__.py  oauth.py  oauth_defaults.py  router.py  token_store.py
src/persona/: __init__.py  persona_config.py
tests/: conftest.py  test_agent_loop.py  test_app_settings.py  test_checkpoint_manager.py  test_checkpoints.py  test_cli_repl.py  test_errcodes.py  test_excel_reader.py  test_fennec_safety.py  test_integration_backends.py  test_llm_client.py  test_new_actions.py  test_nim_client.py  test_oauth.py  test_ods_xls_reader.py  test_ollama_client.py  test_router.py  test_runner_edge.py  test_runner_utils.py  test_sandbox.py  test_structured_actions.py  test_token_store.py  test_tools_coverage.py  test_workbook_actions.py
(+11 files in other folders)
