[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sahara-fennec"
version = "2.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:sahara_fennec.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/gui/*",
    "src/cli/*",
    "src/com_utils.py",
    "src/logging_config.py",
    "src/persona/*",
    "src/integrations/backends/*",
    "src/integrations/oauth.py",
    "src/integrations/oauth_defaults.py",
    "src/agent/ollama_client.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/fixtures"]
